--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -1,10 +1,11 @@
-name: Django-app workflow
+name: yamdb_workflow
 
 on: [push]
 
 jobs:
   tests:
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
@@ -13,42 +14,43 @@ jobs:
         python-version: 3.7
 
     - name: Install dependencies
-      run: | 
-        python3 -m pip install --upgrade pip 
-        pip3 install flake8
-        python3 -m pip install -r api_yamdb/requirements.txt 
-    - name: Test with flake8
       run: |
-        python3 -m flake8
-    - name: Test with django tests
+        # обновление pip
+        python -m pip install --upgrade pip
+        # установка flake8 и его плагинов
+        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
+        # установка зависимостей
+        pip install -r api_yamdb/requirements.txt
+    - name: Test with flake8 and django tests
       run: |
+        # запуск проверки проекта по flake8
+        python -m flake8
         pytest
   build_and_push_to_docker_hub:
-    name: Push Docker image to Docker Hub
-    runs-on: ubuntu-latest
-    needs: tests
-    if: github.ref == 'refs/heads/master'
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1 
-      - name: Login to Docker 
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v2 
-        with:
-          context: api_yamdb/
-          push: true
-          tags: ifize/yamdb_final:latest
+      name: Push Docker image to Docker Hub
+      runs-on: ubuntu-latest
+      needs: tests
+      steps:
+        - name: Check out the repo
+          uses: actions/checkout@v2
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v1
+        - name: Login to Docker
+          uses: docker/login-action@v1
+          with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
+        - name: Push to Docker Hub
+          uses: docker/build-push-action@v2
+          with:
+            push: true
+            file: ./api_yamdb/Dockerfile
+            tags: artemkms/infra_action:latest
+
   deploy:
-    runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
-    if: github.ref == 'refs/heads/master'
-    steps:
+      runs-on: ubuntu-latest
+      needs: build_and_push_to_docker_hub
+      steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
@@ -65,16 +67,14 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-            sudo docker-compose up -d 
+            sudo docker-compose up -d
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
-    if: github.ref == 'refs/heads/master'
     steps:
     - name: send message
       uses: appleboy/telegram-action@master
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: ${{ github.workflow }} успешно выполнен!
-
+        message: ${{ github.workflow }} проект успешно выполнен!
