--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -1,4 +1,4 @@
-name: yamdb_workflow
+name: yamdb workflow
 
 on: [push]
 
@@ -13,45 +13,43 @@ jobs:
         python-version: 3.7
 
     - name: Install dependencies
-      run: |
-        # обновление pip
-        python -m pip install --upgrade pip
-        # установка flake8 и его плагинов
+      run: | 
+        python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        # установка зависимостей
-        pip install -r api_yamdb/requirements.txt
-
-    - name: Test with flake8 and django tests
+        cd api_yamdb/
+        pip install -r requirements.txt 
+    - name: Test with flake8
       run: |
-        # запуск проверки проекта по flake8
-        pytest
         python -m flake8
-
+    - name: Test with django tests
+      run: |
+        pytest
   build_and_push_to_docker_hub:
-      name: Push Docker image to Docker Hub
-      runs-on: ubuntu-latest
-      needs: tests
-      steps:
-        - name: Check out the repo
-          uses: actions/checkout@v2
-        - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v1
-        - name: Login to Docker
-          uses: docker/login-action@v1
-          with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
-        - name: Push to Docker Hub
-          uses: docker/build-push-action@v2
-          with:
-            push: true
-            file: ./api_yamdb/Dockerfile
-            tags: artemkms/infra_action:latest
-
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: tests
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1 
+      - name: Login to Docker 
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2 
+        with:
+          context: api_yamdb/
+          push: true
+          tags: ifize/yamdb_final:latest
   deploy:
-      runs-on: ubuntu-latest
-      needs: build_and_push_to_docker_hub
-      steps:
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    if: github.ref == 'refs/heads/master'
+    steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
@@ -68,14 +66,15 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-            sudo docker-compose up -d
+            sudo docker-compose up -d 
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
+    if: github.ref == 'refs/heads/master'
     steps:
     - name: send message
       uses: appleboy/telegram-action@master
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: ${{ github.workflow }} проект успешно выполнен!
+        message: ${{ github.workflow }} успешно выполнен!
