--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -44,7 +44,7 @@ jobs:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: docker.io/sokolnikovbogdan/yamdb:latest
+          tags: sokolnikovbogdan/infra_action:latest
 
   deploy:
     runs-on: ubuntu-latest
