--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
 
 
   web:
-    image: ifize/yamdb_final
+    image: sokolnikovbogdan/infra_action
     restart: always
     volumes:
       - static_value:/app/static/
