dellited old server and made new one

--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
 
-    server_name 158.160.13.121 thebestmessager.ddns.net;
+    server_name 51.250.111.183 eloquence.ddns.net;
 
     location /static/ {
         root /var/html/;
