--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
 
-    server_name 62.84.121.197 eloquence.ddns.net;
+    server_name 158.160.4.8 notify.ddns.net;
 
     location /static/ {
         root /var/html/;
