--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -11,7 +11,11 @@ server {
         root /var/html/;
     }
 
+    locatin /redoc/ {
+        root var/html/static/;
+    }
+
     location / {
         proxy_pass http://web:8000;
     }
-} 
+}
