--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -11,7 +11,7 @@ server {
         root /var/html/;
     }
 
-    locatin /redoc/ {
+    location /redoc/ {
         root var/html/static/;
     }
 
