--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -12,7 +12,7 @@ server {
     }
 
     location /redoc/ {
-        root var/html/static/;
+        root var/html/static/redoc.yaml;
     }
 
     location / {
