--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -3,6 +3,10 @@ server {
 
     server_name 158.160.4.8 notify.ddns.net;
 
+    location /redoc/ {
+        root /var/html/static/;
+    }
+
     location /static/ {
         root /var/html/;
     }
