please redoc start to work

--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -3,16 +3,16 @@ server {
 
     server_name 158.160.4.8 notify.ddns.net;
 
-    location /redoc/ {
-        root /var/html/static/;
-    }
-
     location /static/ {
         root /var/html/;
     }
 
     location /media/ {
         root /var/html/;
+    }
+
+    location /redoc/ {
+        root /var/html/static/redoc.yaml;
     }
 
     location / {
